samples/_failures_safe/1761557581_3ae44e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4a5ca591.c: In function ‘main’:
./samples/SAFE/__tmp_4a5ca591.c:156:9: error: expected declaration or statement at end of input
  156 |         if (scanf("%d", &choice) != 1) {
      |         ^~
./samples/SAFE/__tmp_4a5ca591.c:156:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4a5ca591.c:156:9: error: expected declaration or statement at end of input
